# pyquotex

./: "Add Binary Bot code  .gitignore  LICENSE  README.md  app.py  main.py  my_connection.py  pyproject.toml  requirements.txt  run_in_termux.sh  session.json  setup.py  singleton_decorator.py
.github/workflows/: notify-telegram.yml
docs/: README.md  _config.yml
docs/en/: 1. Installation and Configuration.md  10. Considerations and Warnings.md  10. Technical Aspects.md  11. Considerations and Warnings.md  2. Connection and Authentication.md  3. Trading Operations.md  4. Market Data Retrieval.md  5. Account Management.md  6. Technical Indicators.md  7. WebSocket.md  8. Utilities and Helpers.md  9. Basic Examples.md  API_REFERENCE.md  Architecture.md  index.md
docs/es/: 1. Instalación y Configuración.md  10. Aspectos Técnicos.md  11. Consideraciones y Advertencias.md  2. Conexión y Autenticación.md  3. Operaciones de Trading.md  4. Obtención de Datos del Mercado.md  5. Gestión de Cuenta.md  6. WebSocket.md  6.Indicadores Técnicos.md  7. WebSocket.md  8. Aspectos Técnicos.md  8. Utilidades y Helpers.md  9. Ejemplos Básicos.md  index.md
docs/pt/: 1. Instalação e Configuração.md  10. Aspectos Técnicos.md  10. Considerações e Advertências.md  11. Considerações e Advertências.md  2. Conexão e Autenticação.md  3. Operações de Trading.md  4. Obtenção de Dados do Mercado.md  5. Gestão de Conta.md  6. Indicadores Técnicos.md  7. WebSocket.md  8. Aspectos Técnicos.md  8. Utilitários e Helpers.md  9. Exemplos Básicos.md  index.md
examples/: binary_bot.py  change_type_account.py  custom_config.py  flowstrategy.py  monitoring_assets.py  optimization_demo.py  tournament_demo.py  trade_bot.py  trade_by_signal.py  user_test.py  wicks_quotex.py
pyquotex/: __init__.py  __main__.py  api.py  config.py  expiration.py  global_value.py  stable_api.py
pyquotex/http/: history.py  login.py  logout.py  navigator.py  resource.py  settings.py
pyquotex/network/: history.py  login.py  logout.py  navigator.py  settings.py
pyquotex/utils/: account_type.py  async_utils.py  indicators.py  json_utils.py  optimization.py  processor.py  services.py  strategy.py
pyquotex/ws/: client.py
quotexapi/: README.md  __init__.py  __main__.py  api.py  config.py  constants.py  expiration.py  global_value.py  stable_api.py
settings/: config.ini
tests/: test_account_type.py  test_api.py  test_basic.py  test_buy.py  test_deep_history.py  test_expiration.py  test_indicators.py  test_infinite_history.py  test_login.py  test_processor.py  test_subscribe_indicator.py  test_tournament.py  test_user.py  test_win.py
(+44 files in other folders)
